// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn outdated should highlight package names and version ranges 1`] = `
"{bold}Package  {bold}   {bold}Current{bold}   {bold}Latest{bold}   {bold}Package Type{bold}
{yellow}package-b{yellow}   1.1.1     1.{bold}{yellow}3.0 {yellow}{bold}   dependencies
{green}package-c{green}   1.2.0     1.2.{bold}{green}1 {green}{bold}   dependencies
{red}package-d{red}   1.0.0     {bold}{red}2.0.0 {red}{bold}   dependencies
"
`;

exports[`yarn outdated should ignore non-semver ranges 1`] = `
"Package     Current   Latest   Package Type   
package-b   1.1.1     1.3.0    devDependencies
package-d   1.2.3     2.0.0    devDependencies
"
`;

exports[`yarn outdated should properly format scoped dependencies 1`] = `
"Package                 Current   Latest   Package Type   
@test-scope/package-a   3.0.1     3.4.0    dependencies   
package-a               1.0.1     1.1.0    devDependencies
"
`;

exports[`yarn outdated should show outdated dependencies 1`] = `
"Package     Current   Latest   Package Type
package-b   1.1.1     1.3.0    dependencies
package-c   1.2.0     1.2.1    dependencies
"
`;

exports[`yarn outdated should show outdated devDependencies 1`] = `
"Package     Current   Latest   Package Type   
package-b   1.1.1     1.3.0    devDependencies
"
`;
